Improve logging, slow down game